stack.yml
AWSTemplateFormatVersion: "2010-09-09"

Description: Todobackend Application

Parameters:
  ApplicationDesiredCount:
    Type: Number
    Description: Desired EC2 instance count

  ApplicationImageId:
    Type: String
    Description: ECS Amazon Machine Image (AMI) ID

  ApplicationImageTag:
    Type: String
    Default: latest
    Description: Application Docker Image Tag

  ApplicationSubnets:
    Type: "List<AWS::EC2::Subnet::Id>"
    Description: Target subnets for EC2 instances

  VpcId:
    Type: "AWS::EC2::VPC::Id"
    Description: Target VPC

Resources:
  ApplicationAutoscaling:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    CreationPolicy:
      ResourceSignal:
        Count: !Ref ApplicationDesiredCount
        Timeout: PT15M
    Properties:
      DesiredCapacity: !Ref ApplicationDesiredCount
      LaunchConfigurationName: !Ref ApplicationAutoscalingLaunchConfiguration
      MaxSize: 4
      MinSize: 0
      Tags:
        - Key: Name
          PropagateAtLaunch: "true"
          Value: !Sub "${AWS::StackName}-ApplicationAutoscaling-instance"
      VPCZoneIdentifier: !Ref ApplicationSubnets

  ApplicationAutoscalingInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Roles:
        - Ref: ApplicationAutoscalingInstanceRole

  ApplicationAutoscalingInstanceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Policies:
        - PolicyName: ECSContainerInstancePermissions
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "ecs:RegisterContainerInstance"
                  - "ecs:DeregisterContainerInstance"
                  - "ecs:UpdateContainerInstancesState"
                Resource: !Sub ${ApplicationCluster.Arn}
              - Effect: Allow
                Action:
                  - "ecs:DiscoverPollEndpoint"
                  - "ecs:Submit*"
                  - "ecs:Poll"
                  - "ecs:StartTelemetrySession"
                Resource: "*"
              - Effect: Allow
                Action:
                  - "ecr:BatchCheckLayerAvailability"
                  - "ecr:BatchGetImage"
                  - "ecr:GetDownloadUrlForLayer"
                  - "ecr:GetAuthorizationToken"
                Resource: "*"
              - Effect: Allow
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                  - "logs:DescribeLogStreams"
                Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/${AWS::StackName}*"

  ApplicationAutoscalingLaunchConfiguration:
    Type: "AWS::AutoScaling::LaunchConfiguration"
    Metadata:
      "AWS::CloudFormation::Init":
        config:
          commands:
            "05_public_volume":
              command: mkdir -p /data/public
            "06_public_volume_permissions":
              command: "chown -R 1000:1000 /data/public"
            "10_first_run":
              command: sh firstrun.sh
              cwd: /home/ec2-user
              env:
                AUTOSCALING_GROUP: ApplicationAutoscaling
                AWS_DEFAULT_REGION: !Ref "AWS::Region"
                ECS_CLUSTER: !Ref ApplicationCluster
                STACK_NAME: !Ref "AWS::StackName"
    Properties:
      IamInstanceProfile: !Ref ApplicationAutoscalingInstanceProfile
      ImageId: !Ref ApplicationImageId
      InstanceType: t2.micro
      KeyName: admin
      SecurityGroups:
        - Ref: ApplicationAutoscalingSecurityGroup
      UserData: !Base64
        "Fn::Sub": "#!/bin/bash\n/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} \\\n  --resource ApplicationAutoscalingLaunchConfiguration \\\n  --region ${AWS::Region}\n/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} \\\n  --resource ApplicationAutoscaling \\\n  --region ${AWS::Region}\n"

  ApplicationAutoscalingSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "${AWS::StackName} Application Autoscaling Security Group"
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 22
          IpProtocol: udp
          ToPort: 22
        - CidrIp: "0.0.0.0/0"
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: "0.0.0.0/0"
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId: !Ref VpcId

  ApplicationCluster:
    Type: "AWS::ECS::Cluster"
    Properties:
      ClusterName: todobackend-cluster

  ApplicationDatabase:
    Type: "AWS::RDS::DBInstance"
    Properties:
      AllocatedStorage: 10
      AvailabilityZone: !Sub "${AWS::Region}a"
      DBInstanceClass: db.t2.micro
      DBName: todobackend
      DBSubnetGroupName: !Ref ApplicationDatabaseSubnetGroup
      Engine: MySQL
      EngineVersion: 5.7
      MasterUserPassword: !Sub ${Secrets.MYSQL_PASSWORD}
      MasterUsername: todobackend
      MultiAZ: "false"
      StorageType: gp2
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-db"
      VPCSecurityGroups:
        - Ref: ApplicationDatabaseSecurityGroup

  ApplicationDatabaseSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: !Sub "${AWS::StackName} Application Database Security Group"
      SecurityGroupEgress:
        - CidrIp: "192.0.2.0/32"
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-db-sg"
      VpcId: !Ref VpcId

  ApplicationDatabaseSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: Application Database Subnet Group
      SubnetIds: !Ref ApplicationSubnets
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-db-subnet-group"

  ApplicationLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: 30
      Scheme: internet-facing
      SecurityGroups:
        - Ref: ApplicationLoadBalancerSecurityGroup
      Subnets: !Ref ApplicationSubnets
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-alb"

  ApplicationLoadBalancerHttpListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ApplicationServiceTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  ApplicationLoadBalancerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Application Load Balancer Security Group
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-alb-sg"
      VpcId: !Ref VpcId

  ApplicationLoadBalancerToApplicationEgress:
    Type: "AWS::EC2::SecurityGroupEgress"
    Properties:
      DestinationSecurityGroupId: !Ref ApplicationAutoscalingSecurityGroup
      FromPort: 32768
      GroupId: !Ref ApplicationLoadBalancerSecurityGroup
      IpProtocol: tcp
      ToPort: 60999

  ApplicationLoadBalancerToApplicationIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      FromPort: 32768
      GroupId: !Ref ApplicationAutoscalingSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationLoadBalancerSecurityGroup
      ToPort: 60999

  ApplicationLogGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      LogGroupName: !Sub "/${AWS::StackName}/ecs/todobackend"
      RetentionInDays: 7

  ApplicationService:
    Type: "AWS::ECS::Service"
    DependsOn:
      - ApplicationAutoscaling
      - ApplicationLogGroup
      - ApplicationLoadBalancerHttpListener
      - MigrateTask
    Properties:
      Cluster: !Ref ApplicationCluster
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DesiredCount: !Ref ApplicationDesiredCount
      LoadBalancers:
        - ContainerName: todobackend
          ContainerPort: 8000
          TargetGroupArn: !Ref ApplicationServiceTargetGroup
      Role: !Sub "arn:aws:iam::${AWS::AccountId}:role/aws-service-role/ecs.amazonaws.com/AWSServiceRoleForECS"
      TaskDefinition: !Ref ApplicationTaskDefinition

  ApplicationServiceTargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Port: 8000
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 30
      VpcId: !Ref VpcId

  SecretsManager:
    Type: AWS::Lambda::Function
    DependsOn:
      - SecretsManagerLogGroup
    Properties:
      FunctionName: !Sub ${AWS::StackName}-secretsManager
      Description: !Sub ${AWS::StackName} Secrets Manager
      Handler: index.handler
      MemorySize: 128
      Runtime: python3.6
      Timeout: 300
      Role: !Sub ${SecretsManagerRole.Arn}
      Code:
        ZipFile: |
          import cfnresponse, json, sys, os
          import boto3

          client = boto3.client('secretsmanager')

          def handler(event, context):
            sys.stdout = sys.__stdout__
            try:
              print("Received event %s" % event)
              if event['RequestType'] == 'Delete':
                cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, event['PhysicalResourceId'])
                return
              secret = client.get_secret_value(
                SecretId=event['ResourceProperties']['SecretId'],
              )
              credentials = json.loads(secret['SecretString'])
              # Suppress logging output to ensure credential values are kept secure
              with open(os.devnull, "w") as devnull:
                sys.stdout = devnull
                cfnresponse.send(
                  event,
                  context,
                  cfnresponse.SUCCESS,
                  credentials, # This dictionary will be exposed to CloudFormation resources
                  secret['VersionId'], # Physical ID of the custom resource
                  noEcho=True
                )
            except Exception as e:
              print("A failure occurred with exception %s" % e)
              cfnresponse.send(event, context, cfnresponse.FAILED, {})

  SecretsManagerRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: SecretsManagerPermissions
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Sid: GetSecrets
                Effect: Allow
                Action:
                  - secretsmanager:GetSecretValue
                Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:todobackend/*
              - Sid: DecryptSecrets
                Effect: Allow
                Action:
                  - kms:Decrypt
                Resource: !ImportValue secrets-key
              - Sid: ManageLambdaLogs
                Effect: Allow
                Action:
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: !Sub ${SecretsManagerLogGroup.Arn}
  SecretsManagerLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/lambda/${AWS::StackName}-secretsManager
      RetentionInDays: 7

  ApplicationTaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
         - Effect: Allow
           Principal:
            Service: ecs-tasks.amazonaws.com
           Action:
            - sts:AssumeRole
      Policies:
        - PolicyName: SecretsManagerPermissions
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Sid: GetSecrets
                Effect: Allow
                Action:
                  - secretsmanager:GetSecretValue
                Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:todobackend/*
              - Sid: DecryptSecrets
                Effect: Allow
                Action:
                  - kms:Decrypt
                Resource: !ImportValue secrets-key

  ApplicationTaskDefinition:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      TaskRoleArn: !Sub ${ApplicationTaskRole.Arn}
      ContainerDefinitions:
        - Name: todobackend
          Command:
            - uwsgi
            - "--http=0.0.0.0:8000"
            - "--module=todobackend.wsgi"
            - "--master"
            - "--die-on-term"
            - "--processes=4"
            - "--threads=2"
            - "--check-static=/public"
          Cpu: 245
          Environment:
            - Name: DJANGO_SETTINGS_MODULE
              Value: todobackend.settings_release
            - Name: MYSQL_HOST
              Value: !Sub ${ApplicationDatabase.Endpoint.Address}
            - Name: MYSQL_USER
              Value: todobackend
            - Name: MYSQL_DATABASE
              Value: todobackend
            - Name: SECRETS
              Value: todobackend/secrets
            - Name: AWS_DEFAULT_REGION
              Value: !Ref AWS::Region
          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/docker-in-aws/todobackend:${ApplicationImageTag}"
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub "/${AWS::StackName}/ecs/todobackend"
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: docker
          MemoryReservation: 395
          MountPoints:
            - ContainerPath: /public
              SourceVolume: public
          PortMappings:
            - ContainerPort: 8000
              HostPort: 0
        - Name: collectstatic
          Command:
            - python3
            - manage.py
            - collectstatic
            - "--no-input"
          Cpu: 5
          Environment:
            - Name: DJANGO_SETTINGS_MODULE
              Value: todobackend.settings_release
          Essential: false
          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/docker-in-aws/todobackend:${ApplicationImageTag}"
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub "/${AWS::StackName}/ecs/todobackend"
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: docker
          MemoryReservation: 5
          MountPoints:
            - ContainerPath: /public
              SourceVolume: public
      Family: todobackend
      Volumes:
        - Name: public
          Host:
            SourcePath: /data/public

  ApplicationToApplicationDatabaseEgress:
    Type: "AWS::EC2::SecurityGroupEgress"
    Properties:
      DestinationSecurityGroupId: !Ref ApplicationDatabaseSecurityGroup
      FromPort: 3306
      GroupId: !Ref ApplicationAutoscalingSecurityGroup
      IpProtocol: tcp
      ToPort: 3306

  ApplicationToApplicationDatabaseIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      FromPort: 3306
      GroupId: !Ref ApplicationDatabaseSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ApplicationAutoscalingSecurityGroup
      ToPort: 3306

  EcsTaskRunner:
    Type: "AWS::Lambda::Function"
    DependsOn:
      - EcsTaskRunnerLogGroup
    Properties:
      Code:
        ZipFile: "import cfnresponse\nimport boto3\n\nclient = boto3.client('ecs')\n\ndef handler(event, context):\n  try:\n    print(\"Received event %s\" % event)\n    if event['RequestType'] == 'Delete':\n      cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, event['PhysicalResourceId'])\n      return\n    tasks = client.run_task(\n      cluster=event['ResourceProperties']['Cluster'],\n      taskDefinition=event['ResourceProperties']['TaskDefinition'],\n      overrides=event['Resourc [...]
      Description: !Sub "${AWS::StackName} ECS Task Runner"
      FunctionName: !Sub "${AWS::StackName}-ecsTasks"
      Handler: index.handler
      MemorySize: 128
      Role: !Sub ${EcsTaskRunnerRole.Arn}
      Runtime: python3.6
      Timeout: 300

  EcsTaskRunnerLogGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      LogGroupName: !Sub "/aws/lambda/${AWS::StackName}-ecsTasks"
      RetentionInDays: 7

  EcsTaskRunnerRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Policies:
        - PolicyName: EcsTaskRunnerPermissions
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Sid: EcsTasks
                Effect: Allow
                Action:
                  - "ecs:DescribeTasks"
                  - "ecs:ListTasks"
                  - "ecs:RunTask"
                Resource: "*"
                Condition:
                  ArnEquals:
                    "ecs:cluster": !Sub ${ApplicationCluster.Arn}
              - Sid: ManageLambdaLogs
                Effect: Allow
                Action:
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource: !Sub ${EcsTaskRunnerLogGroup.Arn}

  MigrateTask:
    Type: "AWS::CloudFormation::CustomResource"
    DependsOn:
      - ApplicationAutoscaling
      - ApplicationDatabase
    Properties:
      Cluster: !Ref ApplicationCluster
      ServiceToken: !Sub ${EcsTaskRunner.Arn}
      TaskDefinition: !Ref MigrateTaskDefinition

  Secrets:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken: !Sub ${SecretsManager.Arn}
      SecretId: todobackend/credentials

  MigrateTaskDefinition:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      TaskRoleArn: !Sub ${ApplicationTaskRole.Arn}
      ContainerDefinitions:
        - Name: migrate
          Command:
            - python3
            - manage.py
            - migrate
            - "--no-input"
          Cpu: 5
          Environment:
            - Name: DJANGO_SETTINGS_MODULE
              Value: todobackend.settings_release
            - Name: MYSQL_HOST
              Value: !Sub ${ApplicationDatabase.Endpoint.Address}
            - Name: MYSQL_USER
              Value: todobackend
            - Name: MYSQL_DATABASE
              Value: todobackend
            - Name: SECRETS
              Value: todobackend/credentials
            - Name: AWS_DEFAULT_REGION
              Value: !Ref AWS::Region
          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/docker-in-aws/todobackend:${ApplicationImageTag}"
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub "/${AWS::StackName}/ecs/todobackend"
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: docker
          MemoryReservation: 5
      Family: todobackend-migrate

Outputs:
  PublicURL:
    Description: Public DNS name of Application Load Balancer
    Value: !Sub ${ApplicationLoadBalancer.DNSName}
